# lab7

./: CMakeLists.txt  README.md  main.cpp
dependences/: CMakeLists.txt  car.h  express.h  train.h  transport.h
